--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,6 @@
     <string name="title_activity_navegation_drawer">NavegationDrawerActivity</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="nombreEstacion"></string>
+    <string name="nombreEstacion">...</string>
 
 </resources>
