--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,16 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="nombreEstacion">...</string>
+    <string-array name="modalidad_spinner">
+        <item>esqui</item>
+        <item>snowboard</item>
+        <item>travesia</item>
+    </string-array>
+    <string-array name="nivel_spinner">
+        <item>principiante</item>
+        <item>intermedio</item>
+        <item>avanzado</item>
+        <item>experto</item>
+    </string-array>
 
 </resources>
